--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -24,7 +24,7 @@
 .infoCardContainer {
   max-width: 1260;
   margin: 0 auto;
-  padding: 0;
+  padding: 0 0 0 0;
 }
 .infoCardHeadline {
   color: black;
