--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -22,7 +22,7 @@
   background-color: #edcfd1;
 }
 .infoCardContainer {
-  max-width: 1260;
+  max-width: 1260px;
   margin: 0 auto;
   padding: 0;
 }
