--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -19,7 +19,7 @@
   border: transparent;
 }
 .infoCardContainer--vintage {
-  background-color: #EDCFD1;
+  background-color: #edcfd1;
 }
 .infoCardContainer {
   max-width: 1260px;
